--- a/chart.ipynb
+++ b/chart.ipynb
@@ -21,8 +21,8 @@
    "source": [
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.plot([59.5, 64, 70.5, 94.5, 107, 119.5, (128+163)/2, 169.5, 182.5, 196, 210.5], [19.5, 24.3, 4.8, 4.9, 12.1, 5.5, 2.4, 7.4, 7.3, 6.8, 6.3])\n",
+    "# plt\n",
+    "plt.plot([59.5, 64, 70.5, 94.5, 107, 119.5, (128 + 163) / 2, 169.5, 182.5, 196, 210.5], [19.5, 24.3, 4.8, 4.9, 12.1, 5.5, 2.4, 7.4, 7.3, 6.8, 6.3])\n",
     "plt.show()"
    ]
   },
